[tool.poetry]
name = "openbandpy"
version = "0.1.0"
description = "Python-based Naver Band API"
authors = ["Ji-ho Lee <search5@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
keyring = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
